# Multipurpose-Agribot

./: README.md
agribot_path_follower/src/: mark_follower.cpp
agribot_v2/agribot_path_follower/: CMakeLists.txt  package.xml
agribot_v2/agribot_path_follower/src/: mark_follower.cpp  path_follower.cpp  seeder.cpp  sprayer.cpp
agribot_v2/agribot_v2_description/: CMakeLists.txt
agribot_v2/agribot_v2_description/launch/: controller.yaml  display.launch  seed_world.launch  spray_world.launch  sprayer.rviz
agribot_v2/agribot_v2_description/meshes/: front_camera_1.stl
agribot_v2/agribot_v2_description/urdf/: agribot_v2.trans  agribot_v2.xacro
agribot_v2/agribot_world/: CMakeLists.txt  package.xml
agribot_v2/agribot_world/worlds/: seeding.world
agribot_v21_description/: CMakeLists.txt  package.xml
agribot_v21_description/launch/: controller.launch  controller.yaml  gazebo.launch
agribot_v21_description/meshes/: seeder_3.stl  sprayer_v12_1.stl  weeder_1.stl  wheel_back_right_1.stl  wheel_front_left_1.stl  yaw_struct_1.stl
agribot_v21_description/src/: motion.py
agribot_v21_description/urdf/: agribot_v2.gazebo  agribot_v2.trans  agribot_v2.xacro
agribot_v2_description/: package.xml
agribot_v2_description/launch/: controller.launch  gazebo.launch  seeder.rviz
agribot_v2_description/meshes/: wheel_back_left_1.stl  wheel_front_right_1.stl
agribot_v2_description/urdf/: agribot_v2.gazebo  materials.xacro
agribot_world/models/field/: model.sdf
agribot_world/models/follow_marker/: model.config
agribot_world/worlds/: sim_world.world  spraying.world
(+19 files in other folders)
