<?xml version="1.0"?>
<package format="2">
  <name>agribot_path_follower</name>
  <version>0.0.0</version>
  <description>The agribot_path_follower package</description>
  <maintainer email="abhicv@todo.todo">abhicv</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
 
  <export>
  </export>
</package>
